# Global-TimesSync-Api

./: .ebignore  .env.example  .gitignore  LICENSE  Procfile  README.md  deployment_guide.md  export_requirements.py  main.py  pyproject.toml  render.yaml  requirements.txt.fixed
.ebextensions/: 01_flask.config
api/: auth.py  cache.py  config.py  models.py  timesync.py
attached_assets/: Pasted--Downloading-poetry-2-1-1-py3-none-any-whl-metadata-7-1-kB-Collecting-build-2-0-0-1-2-1-from-p-1743237825364.txt  Pasted-Downloading-poetry-core-2-1-1-py3-none-any-whl-metadata-3-5-kB-Collecting-pyproject-hooks-2-0-0--1743237786699.txt
static/: robots.txt
static/css/: custom.css
static/js/: dashboard.js
templates/: 404.html  500.html  api.html  base.html  dashboard.html  index.html
